--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -789,6 +789,9 @@ section {
   padding: 0 0 80px 0;
   color: #FFF;
   position: relative;
+  height: 201vh;
+  display: flex;
+  align-items: center;
 }
 
 .solution .content {
@@ -944,6 +947,11 @@ section {
   margin-top: 40px;
 }
 @media (max-width: 768px) {
+  .solution{
+    height: auto;
+    display: block;
+    align-items: center;
+  }
   .solution h1{
     font-size: 90px;
     line-height: 164px;
