--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -445,7 +445,7 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 768px) {
   #dweb {
     height: 120vh;
-    padding: 100px 0;
+    padding: 100px 0 140px;
     background: url("../img/top_bg.jpg") bottom left no-repeat, linear-gradient(261.51deg, #7E02DF -31.95%, #1E21AB 79.36%) top center;
     background-size: cover, cover;
   }
@@ -789,7 +789,7 @@ section {
   padding: 0 0 80px 0;
   color: #FFF;
   position: relative;
-  height: 201vh;
+  height: 218vh;
   display: flex;
   align-items: center;
 }
@@ -953,7 +953,7 @@ section {
     align-items: center;
   }
   .solution h1{
-    font-size: 90px;
+    font-size: 64px;
     line-height: 164px;
   }
   .solution h5 {
