--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1844,10 +1844,8 @@ section {
   padding-bottom: 0;
 }
 .modal-header .pic {
-  position: absolute;
+  position: relative;
   width: 150px;
-  top: -75px;
-  left: calc(50% - 75px);
 }
 .modal-header .pic .social i {
   font-size: 28px;
@@ -1859,7 +1857,7 @@ section {
 
 .modal-title {
   width: 100%;
-  margin: 80px 0 0;
+  margin: 40px 0 0;
   text-align: center;
   font-family: 'Montserrat';
   font-style: normal;
